Changes towards version 0.3:
- Fixed some more false key cancels, addressing 378 again - Michael
- Added "gestalt mode" for acceleration cancels; fixes #381 - Michael
- Fixed some "false key cancels" in the input system, addressing bugs 
  #378 and #379 -Michael
- Completely reworked the input system
- Added PC version outtakes, from chmmravatar
- Fix crash in PlayStream when whole file is prebuffered and its not
  speech (bug #259) -Mika
- Fix endian problem in colormap transform code (bug #137) -Mika
- Fix minor glitch in planet coarse scan (bug #238), from chmmravatar
- Wav loader is now endian safe (bug #165) -Mika
- Dialogue patch for Melnorme, fixing bug #335
- Two dialogue spots where visit count could run away patched; fixes bug 
  #333, from Stas Sergeev
- EventHandler checks CurStarDescPtr before dereferencing it (bug #347)
- Oscilloscope/mini-map now has borders (bug #307 part 4) -Mika
- Flashing rects are no longer constrained to even-numbered pixels on the
  y axis; fixes bug #255, from Nic
- Fixed minor glitches in main window borders (bug #307 parts 1,2,3) -Mika
- There's now space before and after : in coordinates (bug #307 part 6),
  from Paxtez
- Star coordinates no longer shimmy (bug #331), from chmmravatar
- The DRAWABLE_DESC datatype now uses separately allocated arrays for
  animation frames instead of doing pointer arithmetic between it and
  FRAME_DESCs --McMartin
- Date on the green bar now has floating period between day and
  the year like in PC version (bug #307 part 5) -Mika
- AWARE_OF_SAMATRA flag is now written as well as read (closes #113), 
  from Nic
- Subtitle drawing is now cached (closes #313) -Mika
- Fix glitch and lockup in dialogs when rewinding (bugs #311 and #272),
  from chmmravatar
- Fastforwarding when in last subtitle now works as expected (bug #318),
  from chmmravatar
- Fixed MixSDL buffer underrun handling (bug #211) -Mika
- Fix issue with caps lock and num lock preventing planet scan